Blog insert on home page + other fixes

--- a/soverance.com/Views/Blog/CreatePost.cshtml
+++ b/soverance.com/Views/Blog/CreatePost.cshtml
@@ -134,7 +134,7 @@
                                                 <h5 class="fsize-32 fweight-700 font-agency uppercase">Media Config:</h5>
                                                 <p class="lheight-30 mt20">
                                                     Occasionally the post may be advertised on various pages of the site using either a static image or a slider preview.
-                                                    The images should all be 270 x 282.  Slider previews will use all three images, while static previews will just use the first one.
+                                                    The images should all be either 370 x 270 (preferred), or 270 x 282.  Slider previews will use all three images, while static previews will just use the first one.
                                                     For a preview video, specify a YouTube "watch" URL, i.e.
                                                 </p>
                                                 <p>
