--- a/soverance.com/Views/Blog/EditPost.cshtml
+++ b/soverance.com/Views/Blog/EditPost.cshtml
@@ -153,13 +153,13 @@
                                                 <h5 class="fsize-32 fweight-700 font-agency uppercase">SLIDER IMAGES - 270 x 282</h5>
                                                 <p class="lheight-30 mt20">
                                                     <label asp-for="Slider1" class="control-label"></label>
-                                                    <input asp-for="Slider1" class="form-control" value="../images/blog/slider-blank.jpg" />
+                                                    <input asp-for="Slider1" class="form-control" />
                                                     <span asp-validation-for="Slider1" class="text-danger"></span>
                                                     <label asp-for="Slider2" class="control-label"></label>
-                                                    <input asp-for="Slider2" class="form-control" value="../images/blog/slider-blank.jpg" />
+                                                    <input asp-for="Slider2" class="form-control" />
                                                     <span asp-validation-for="Slider2" class="text-danger"></span>
                                                     <label asp-for="Slider3" class="control-label"></label>
-                                                    <input asp-for="Slider3" class="form-control" value="../images/blog/slider-blank.jpg" />
+                                                    <input asp-for="Slider3" class="form-control" />
                                                     <span asp-validation-for="Slider3" class="text-danger"></span>
                                                 </p>
                                             </div>
