--- a/soverance.com/Views/Home/Index.cshtml
+++ b/soverance.com/Views/Home/Index.cshtml
@@ -1600,7 +1600,7 @@
     </div>
 </section>
 <!-- TESTIMONIAL SECTION END -->
-<!-- STREAMS SECTION START -->
+<!-- YOUTUBE SECTION START -->
 <section class="ptb150">
     <div class="container">
         <div class="row">
@@ -1736,7 +1736,7 @@
         </div>
     </div>
 </section>
-<!-- STREAMS SECTION END -->
+<!-- YOUTUBE SECTION END -->
 <!-- REGISTER SECTION START -->
 <section class="register-section background-gradient ptb100">
     <div class="container">
