Fix for YouTube links
I'd rather have them update directly in the on-site frame, but they just link directly to YouTube for now

--- a/soverance.com/Areas/EndlessReach/Views/EndlessReach/VR.cshtml
+++ b/soverance.com/Areas/EndlessReach/Views/EndlessReach/VR.cshtml
@@ -216,7 +216,7 @@
                                         <img src="@video.ImageUrl" alt="" height="80" width="80">
                                     </div>
                                     <div class="info-bl inline-block valign-middle ml25">
-                                        <div class="fsize-24 fweight-700 font-agency uppercase color-white" data-trim="35">@video.Title</div>
+                                        <a href="@video.VideoWatchLink" class="fsize-24 fweight-700 font-agency uppercase color-white" data-trim="35">@video.Title</a>
                                         <div>@video.ViewCount views</div>
                                     </div>
                                 </div>
