--- a/soverance.com/Areas/Ethereal/Views/Ethereal/Versions.cshtml
+++ b/soverance.com/Areas/Ethereal/Views/Ethereal/Versions.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Ethereal Loot Table";
+    ViewData["Title"] = "Ethereal Milestone Version History";
 }
 
 <!-- PAGE NAME START -->
@@ -7,14 +7,14 @@
     <div class="container">
         <div class="row">
             <h1 class="page-title">
-                Ethereal Loot Table
+                Ethereal Milestone Version History
             </h1>
             <div class="breadcrumbs">
                 <a asp-area="" asp-controller="Home" asp-action="Index">Home</a> /
                 <a asp-area="" asp-controller="Home" asp-action="Games">Games</a> /
                 <a asp-area="Ethereal" asp-controller="Ethereal" asp-action="Index">Ethereal Legends</a> /
                 <a asp-area="Ethereal" asp-controller="Ethereal" asp-action="Guide">Guide</a> /
-                <span class="color-1">Loot Table</span>
+                <span class="color-1">Milestone Version History</span>
             </div>
         </div>
     </div>
@@ -55,7 +55,7 @@
                                 <div class="table-row">
                                     <div class="table-cell valign-top">
                                         <div class="fsize-14 fweight-700 uppercase color-1">
-                                            Ethereal Legends Version History
+                                            Ethereal Legends Milestone Version History
                                         </div>
                                     </div>
                                     <div class="table-cell valign-top text-right">
@@ -66,41 +66,16 @@
                                 </div>
                             </div>
                             <br />
-                            <p>Use the links below to view the update notes for each specific version.</p>
+                            <p>Major project milestone dates and versions are liseted here.</p>
                             <ul>
                                 <li>05/06/2018 - <a href="https://soverance.com/ethereal-version-update-1-3/">Version 1.3</a>  -  <span style="color: #ff6600;">Current Version</span></li>
-                                <li>04/22/2017 - <a href="http://soverance.com/ethereal-version-update-1-2-2/">Version 1.2.2</a></li>
-                                <li>04/02/2017 - <a href="http://soverance.com/ethereal-version-update-1-2-1/">Version 1.2.1</a></li>
-                                <li>03/20/2017 - <a href="http://soverance.com/ethereal-version-update-1-2/">Version 1.2</a></li>
-                                <li>02/26/2017 - <a href="http://soverance.com/ethereal-version-update-1-1/">Version 1.1</a></li>
-                                <li>02/23/2017 - <a href="http://soverance.com/ethereal-version-update-1-0-1/">Version 1.0.1</a></li>
                                 <li>02/21/2017 - <a href="http://soverance.com/ethereal-legends-now-available-on-steam/">Version 1.0</a>  -  Steam Release</li>
-                                <li>02/17/2017 - <a href="http://soverance.com/ethereal-beta-version-update-0-9-9/">Version 0.9.9  (Beta)</a></li>
-                                <li>02/12/2017 - <a href="http://soverance.com/ethereal-beta-version-update-0-9-8/">Version 0.9.8  (Beta)</a></li>
-                                <li>02/07/2017 - <a href="http://soverance.com/ethereal-beta-version-update-0-9-7/">Version 0.9.7  (Beta)</a></li>
-                                <li>02/03/2017 - <a href="http://soverance.com/ethereal-beta-version-update-0-9-6/">Version 0.9.6  (Beta)</a></li>
-                                <li>01/28/2017 - <a href="http://soverance.com/ethereal-beta-version-update-0-9-5/">Version 0.9.5  (Beta)</a></li>
-                                <li>01/22/2017 - <a href="http://soverance.com/ethereal-beta-update-version-0-9-4/">Version 0.9.4  (Beta)</a></li>
-                                <li>01/13/2017 - <a href="http://soverance.com/ethereal-beta-version-update-0-9-3/">Version 0.9.3  (Beta)</a></li>
-                                <li>01/07/2017 - <a href="http://soverance.com/ethereal-beta-version-update-0-9-2/">Version 0.9.2  (Beta)</a></li>
-                                <li>12/30/2016 - <a href="http://soverance.com/ethereal-beta-version-update-0-9-1/">Version 0.9.1  (Beta)</a></li>
-                                <li>12/15/2016 - <a href="http://soverance.com/ethereal-beta-version-update-0-9/">Version 0.9.0  (Beta)</a></li>
-                                <li>11/23/2016 - <a href="http://soverance.com/ethereal-beta-version-update-0-8-9/">Version 0.8.9  (Beta)</a></li>
-                                <li>11/17/2016 - <a href="http://soverance.com/ethereal-beta-version-update-0-8-8/">Version 0.8.8  (Beta)</a></li>
-                                <li>11/12/2016 - <a href="http://soverance.com/ethereal-beta-update-version-0-8-7/">Version 0.8.7  (Beta)</a></li>
-                                <li>11/08/2016 - <a href="http://soverance.com/ethereal-beta-update-version-0-8-6/">Version 0.8.6  (Beta)</a></li>
-                                <li>10/31/2016 - <a href="http://soverance.com/ethereal-beta-update-0-8-5/">Version 0.8.5  (Beta)</a></li>
-                                <li>10/29/2016 - <a href="http://soverance.com/ethereal-beta-update-version-0-8-4/">Version 0.8.4  (Beta)</a></li>
-                                <li>10/21/2016 - <a href="http://soverance.com/ethereal-beta-update-version-0-8-3/">Version 0.8.3  (Beta)</a></li>
-                                <li>10/15/2016 - <a href="http://soverance.com/ethereal-beta/">Version 0.8.2  (Beta)</a></li>
-                                <li>08/27/2016 - <a href="http://soverance.com/ethereal-legends-now-open-source/">Version 0.8  (Beta)</a>  -  Open Source</li>
+                                <li>08/27/2016 - <a href="http://soverance.com/ethereal-legends-now-open-source/">Version 0.8  (Beta)</a>  -  Open Sourced C++</li>
                                 <li>01/01/2016 - <a href="http://soverance.com/ethereal-alpha-test/">Version 0.6  (Alpha)</a></li>
-                                <li>09/29/2015 - <a href="http://soverance.com/new-features-ethereal-0-3/">Version 0.3  (Pre-Alpha)</a></li>
-                                <li>09/15/2015 - <a href="http://soverance.com/ethereal-on-square-enix-collective/">Version 0.2  (Pre-Alpha)</a>  -  Square Enix Collective Campaign</li>
-                                <li>09/12/2015 - <a href="http://soverance.com/ethereal-on-square-enix-collective/">Version 0.2  (Pre-Alpha)</a>  -  Oculus Share</li>
+                                <li>09/15/2015 - <a href="http://soverance.com/ethereal-on-square-enix-collective/">Version 0.2  (Pre-Alpha)</a>  -  Oculus Share / Square Enix Collective Campaign</li>
                                 <li>08/11/2015 - <a href="http://soverance.com/ethereal-pre-alpha/">Version 0.1  (Pre-Alpha)</a>  -  Steam Greenlight</li>
                                 <li>11/23/2014 - <a href="http://soverance.com/project-ethereal/">Project Ethereal</a>  (UE4 Prototype)</li>
-                                <li>06/25/2013 - <a href="http://soverance.com/soldier-alpha/">FFXI: Soldier</a>  (UDK Prototype)</li>
+                                <li>06/25/2013 - <a href="http://soverance.com/soldier-alpha/">Project Ethereal</a>  (UDK Prototype)</li>
                             </ul>
                         </div>
                         <div class="bottom-info-bl">
