fixed button on index page slider 3

--- a/soverance.com/Views/Home/Index.cshtml
+++ b/soverance.com/Views/Home/Index.cshtml
@@ -929,7 +929,7 @@
                                                  data-adaptivefont="0" data-desktopportraitfontsize="100" data-tabletportraitfontsize="80"
                                                  data-mobileportraitfontsize="100" data-plugin="rendered">
                                                 <div class="n2-ss-button-container n2-ow n2-font-06be61400c1a4b339e67534a8a262348-link  n2-ss-nowrap">
-                                                    <a class="n2-style-588404275f372121297e39cfe0b03e24-heading  n2-ow " onclick="return false;" href="#">
+                                                    <a class="n2-style-588404275f372121297e39cfe0b03e24-heading  n2-ow " onclick="return true;" href="/games">
                                                         <div>
                                                             <div>More games</div>
                                                         </div>
