Updated Twitter widget
as per Twitter policy, all widgets must now be managed @ https://publish.twitter.com

--- a/soverance.com/Views/Blog/Index.cshtml
+++ b/soverance.com/Views/Blog/Index.cshtml
@@ -226,8 +226,8 @@
                 </div>
                 <div class="widget-bl twitter-widget">
                     <div class="widget-wrapper">
-                        <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/Soverance" data-widget-id="347887250270470144">Tweets by @@Soverance</a>
-                        <script>!function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https'; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = p + "://platform.twitter.com/widgets.js"; fjs.parentNode.insertBefore(js, fjs); } }(document, "script", "twitter-wjs");</script>
+                        <a class="twitter-timeline" data-height="650" data-theme="dark" href="https://twitter.com/Soverance?ref_src=twsrc%5Etfw">Tweets by Soverance</a>
+                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                     </div>
                 </div>
                 @if (User.Identity.IsAuthenticated)
