Fixed blog post routing bug
I preferred the other method as far as SEO is concerned, but this was easier to route properly.

--- a/soverance.com/Views/Shared/_Layout.cshtml
+++ b/soverance.com/Views/Shared/_Layout.cshtml
@@ -340,7 +340,7 @@
                             <a asp-area="" asp-controller="Home" asp-action="Games">Games</a>
                         </li>
                         <li>
-                            <a asp-area="Blog" asp-controller="Blog" asp-action="Index">Blog</a>
+                            <a asp-area="" asp-controller="Blog" asp-action="Index">Blog</a>
                         </li>
                         <li>
                             <a asp-area="" asp-controller="Home" asp-action="About">About</a>
