Small update to About

--- a/soverance.com/Views/Home/About.cshtml
+++ b/soverance.com/Views/Home/About.cshtml
@@ -45,6 +45,9 @@
                         <li class="color5">
                             Much of our work is open source <a href="https://github.com/soverance">on GitHub</a>!
                         </li>
+                        <li class="color5">
+                            Check out our <a href="/faq/">FAQ</a> or learn more about our <a href="/team/">Team</a>.
+                        </li>
                     </ul>
                 </div>
             </div>
