--- a/soverance.com/Views/Blog/CreatePost.cshtml
+++ b/soverance.com/Views/Blog/CreatePost.cshtml
@@ -141,7 +141,7 @@
                                                     https://www.youtube.com/watch?v=8dH-CnwhWC4
                                                 </p>
                                                 <p>
-                                                    Images should be uploaded locally and then specified with the "<strong>../images/</strong>" prefix syntax.
+                                                    Images should be uploaded locally and then specified with the "<strong>/images/</strong>" prefix syntax.
                                                 </p>
                                                 <h5 class="fsize-32 fweight-700 font-agency uppercase">YouTube Video</h5>
                                                 <p class="lheight-30 mt20">
