--- a/soverance.com/Views/Blog/Index.cshtml
+++ b/soverance.com/Views/Blog/Index.cshtml
@@ -28,7 +28,7 @@
                     {
                         <article class="vertical-item format-continue-link fsize-0 clearfix">
                             <div class="item-left-img col-lg-4 col-md-4 col-sm-12 col-xs-12 equal-height">
-                                <img src="@post.Slider1" alt="">
+                                <img src="..@post.Slider1" alt="">
                             </div>
                             <div class="post-content col-lg-8 col-md-8 col-sm-12 col-xs-12 equal-height">
                                 <div class="post-wrapper">
@@ -289,7 +289,7 @@
                                             <div class="table table-nobackground">
                                                 <div class="table-row">
                                                     <div class="latest-img table-cell valign-middle">
-                                                        <img src="@post.Slider1" alt="">
+                                                        <img src="..@post.Slider1" alt="">
                                                     </div>
                                                     <div class="latest-title table-cell valign-middle pl20">
                                                         <div class="title-top font-agency fweight-700 uppercase color-white">
