YouTube playlist in Blog Posts feature
with ViewComponents

--- a/soverance.com/Views/Blog/DeleteCategory.cshtml
+++ b/soverance.com/Views/Blog/DeleteCategory.cshtml
@@ -13,7 +13,7 @@
             </h1>
             <div class="breadcrumbs">
                 <a asp-area="" asp-controller="Home" asp-action="Index">Home</a> /
-                <a asp-area="" asp-controller="Blog" asp-action="Index">Blog</a> /
+                <a asp-area="" asp-controller="Blog" asp-action="Index" asp-route-id="">Blog</a> /
                 <span class="color-1">Delete Category</span>
             </div>
         </div>
