--- a/soverance.com/Views/Blog/CreatePost.cshtml
+++ b/soverance.com/Views/Blog/CreatePost.cshtml
@@ -13,7 +13,7 @@
             </h1>
             <div class="breadcrumbs">
                 <a asp-area="" asp-controller="Home" asp-action="Index">Home</a> /
-                <a asp-area="" asp-controller="Blog" asp-action="Index">Blog</a> /
+                <a asp-area="" asp-controller="Blog" asp-action="Index" asp-route-id="">Blog</a> /
                 <span class="color-1">Create Post</span>
             </div>
         </div>
@@ -175,7 +175,7 @@
             </div>
         </div>
         <div>
-            <a asp-action="Index">Back to List</a>
+            <a asp-action="Index" asp-route-id="">Back to List</a>
         </div>
     </div>
 </section>
