--- a/soverance.com/Views/Blog/EditPost.cshtml
+++ b/soverance.com/Views/Blog/EditPost.cshtml
@@ -13,7 +13,7 @@
             </h1>
             <div class="breadcrumbs">
                 <a asp-area="" asp-controller="Home" asp-action="Index">Home</a> /
-                <a asp-area="" asp-controller="Blog" asp-action="Index">Blog</a> /
+                <a asp-area="" asp-controller="Blog" asp-action="Index" asp-route-id="">Blog</a> /
                 <span class="color-1">Edit Post</span>
             </div>
         </div>
@@ -136,19 +136,24 @@
                                                 <p class="lheight-30 mt20">
                                                     Occasionally the post may be advertised on various pages of the site using either a static image or a slider preview.
                                                     The images should all be 270 x 282.  Slider previews will use all three images, while static previews will just use the first one.
-                                                    For a preview video, specify a YouTube "watch" URL, i.e.
-                                                </p>
-                                                <p>
-                                                    https://www.youtube.com/watch?v=8dH-CnwhWC4
-                                                </p>
-                                                <p>
-                                                    Images should be uploaded locally and then specified with the "<strong>/images/</strong>" prefix syntax.
+                                                    For a preview video, specify a complete YouTube "watch" URL.
                                                 </p>
                                                 <h5 class="fsize-32 fweight-700 font-agency uppercase">YouTube Video</h5>
                                                 <p class="lheight-30 mt20">
                                                     <label asp-for="VideoUrl" class="control-label"></label>
                                                     <input asp-for="VideoUrl" class="form-control" />
                                                     <span asp-validation-for="VideoUrl" class="text-danger"></span>
+                                                </p>
+                                                <p>
+                                                    Specify a YouTube Playlist ID if a playlist should appear in the post.
+                                                </p>
+                                                <p class="lheight-30 mt20">
+                                                    <label asp-for="PlaylistId" class="control-label"></label>
+                                                    <input asp-for="PlaylistId" class="form-control" />
+                                                    <span asp-validation-for="PlaylistId" class="text-danger"></span>
+                                                </p>
+                                                <p>
+                                                    Images should be uploaded locally and then specified with the "<strong>/images/</strong>" prefix syntax.
                                                 </p>
                                                 <h5 class="fsize-32 fweight-700 font-agency uppercase">SLIDER IMAGES - 270 x 282</h5>
                                                 <p class="lheight-30 mt20">
