--- a/soverance.com/Views/Blog/EditPost.cshtml
+++ b/soverance.com/Views/Blog/EditPost.cshtml
@@ -145,7 +145,7 @@
                                                     <span asp-validation-for="VideoUrl" class="text-danger"></span>
                                                 </p>
                                                 <p>
-                                                    Specify a YouTube Playlist ID if a playlist should appear in the post.
+                                                    Specify a YouTube Playlist ID if a playlist should appear in the post; otherwise, leave it empty.
                                                 </p>
                                                 <p class="lheight-30 mt20">
                                                     <label asp-for="PlaylistId" class="control-label"></label>
