--- a/soverance.com/Areas/Team/Views/Team/Index.cshtml
+++ b/soverance.com/Areas/Team/Views/Team/Index.cshtml
@@ -58,7 +58,7 @@
                         <img src="~/images/team/cbr600ra-profile.jpg" alt="" class="img-responsive">
                     </div>
                     <div class="text-container background-4 text-center">
-                        <a href="single-team.html" class="name font-agency fsize-32 fweight-700 lheight-32 color-white">
+                        <a href="/team/CBR600RA" class="name font-agency fsize-32 fweight-700 lheight-32 color-white">
                             Honda CBR600RA
                         </a>
                         <div class="position mt10">
@@ -76,7 +76,7 @@
                         <img src="~/images/team/Person-Silhouette.png" alt="" class="img-responsive">
                     </div>
                     <div class="text-container background-4 text-center">
-                        <a href="single-team.html" class="name font-agency fsize-32 fweight-700 lheight-32 color-white">
+                        <a href="#" class="name font-agency fsize-32 fweight-700 lheight-32 color-white">
                             This could be you!
                         </a>
                         <div class="position mt10">
